[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blrec"
dynamic = ["version"]
description = "Bilibili Live Streaming Recorder"
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["bilibili", "live", "danmaku", "recorder"]
license = {text = "GPLv3"}
authors = [
    {name = "acgnhiki", email = "acgnhiki@outlook.com"}
]
maintainers = [
    {name = "acgnhiki", email = "acgnhiki@outlook.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Internet",
    "Topic :: Multimedia :: Video",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed"
]
requires-python = ">= 3.8"
dependencies = [
    "python-liquid >= 1.2.1",
    "typing-extensions >= 3.10.0.0",
    "fastapi >= 0.88.0, < 0.100.0",
    "email_validator >= 1.1.3",
    "typer >= 0.7.0",
    "aiohttp >= 3.8.1",
    "requests >= 2.24.0",
    "aiofiles >= 22.1.0",
    "tenacity >= 8.0.1",
    "loguru >= 0.7.2",
    "humanize >= 3.13.1",
    "tqdm >= 4.62.3",
    "attrs >= 21.2.0",
    "lxml >= 4.6.4",
    "toml >= 0.10.2",
    "m3u8 >= 3.3.0",
    "jsonpath == 0.82",
    "psutil >= 5.8.0",
    "reactivex >= 4.0.0",
    "bitarray >= 2.2.5",
    "brotli >= 1.0.9",
    "brotli-asgi >= 1.3.0",
    "uvicorn[standard] >= 0.20.0",
    "lxml_html_clean"
]

[project.optional-dependencies]
dev = [
    "flake8 >= 4.0.1",
    "mypy == 0.910",
    "isort >= 5.10.1",
    "black >= 22.3.0",
    "autoflake >= 1.4",
    "setuptools >= 59.4.0",
    "wheel >= 0.37",
    "build >= 0.7.0",
    "twine >= 3.7.1",
    "types-requests >= 2.26.1",
    "types-aiofiles >= 0.1.7",
    "types-toml >= 0.10.1",
    "types-setuptools >= 57.4.4"
]
speedups = [
    "aiohttp[speedups] >= 3.8.1"
]

[project.urls]
Homepage = "https://github.com/acgnhiki/blrec"
Repository = "https://github.com/acgnhiki/blrec"

[project.scripts]
blrec = "blrec.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "blrec.__version__"}

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.py$'
skip-string-normalization = true
skip-magic-trailing-comma = true

[tool.isort]
profile = 'black'
