[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blrec"
dynamic = ["version"]
description = "Bilibili Live Streaming Recorder"
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["bilibili", "live", "danmaku", "recorder"]
license = {text = "GPLv3"}
authors = [
    {name = "acgnhiki", email = "acgnhiki@outlook.com"}
]
maintainers = [
    {name = "acgnhiki", email = "acgnhiki@outlook.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Internet",
    "Topic :: Multimedia :: Video",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed"
]
requires-python = ">= 3.10"

dependencies = [
    "python-liquid >= 1.2.1",
    "fastapi >= 0.88.0, < 0.100.0",
    "uvicorn[standard] >= 0.20.0",
    "email_validator",
    "typer >= 0.7.0",
    "aiohttp >= 3.8.1",
    "requests",
    "aiofiles",
    "tenacity",
    "loguru",
    "humanize",
    "tqdm",
    "lxml[html_clean]",
    "toml",
    "m3u8",
    "jsonpath >= 0.82",
    "psutil",
    "reactivex",
    "bitarray",
    "brotli",
    "brotli-asgi"
]

[project.optional-dependencies]
dev = [
    "flake8",
    "mypy",
    "isort",
    "black",
    "autoflake",
    "build",
    "twine",
    "types-requests",
    "types-aiofiles",
    "types-toml",
    "types-setuptools"
]
speedups = [
    "aiohttp[speedups]"
]

[project.urls]
Homepage = "https://github.com/acgnhiki/blrec"
Repository = "https://github.com/acgnhiki/blrec"

[project.scripts]
blrec = "blrec.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "blrec.__version__"}

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.py$'
skip-string-normalization = true
skip-magic-trailing-comma = true

[tool.isort]
profile = 'black'
